--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "unocss": "^0.54.1",
     "unplugin-auto-import": "^0.15.2",
     "unplugin-icons": "^0.16.5",
+    "vant": "^4.8.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.4"
   },
